Change sysman password for OEM_DB named credential (#363)
* Change sysman password for OEM_DB named credential

* Commit changes made by code formatters

---------

Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>

--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_oem_passwords.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/rotate_oem_passwords.yml
@@ -92,6 +92,16 @@
       when: not oms_status.stdout_lines[-1] == 'Up'
       vars:
         ansible_aws_ssm_timeout: 900
+
+    - name: Update OEM_DB Named Credential
+      shell: |
+        . ~/.bash_profile
+        {{ emcli }} sync 1>/dev/null 2>&1 || ( {{ emcli }} login -username=sysman -password=${SYSMAN_PASSWORD} -force && {{ emcli }} sync ) 1>/dev/null 2>&1
+        {{ emcli }} modify_named_credential -cred_name=OEM_DB -cred_type=DBCreds -test -attributes="DBUserName:sysman;DBRole:Normal;DBPassword:${SYSMAN_PASSWORD}"
+      environment:
+        SYSMAN_PASSWORD: "{{ new_password }}"
+      register: update_name_credential
+      failed_when: update_name_credential.rc != 0
 # - name: Create New Password for Nodemanager
 #   include: ../../all_password_rotation/tasks/create_random_password.yml
 
