--- a/.github/workflows/oracle-db-oem-password-rotation.yml
+++ b/.github/workflows/oracle-db-oem-password-rotation.yml
@@ -93,7 +93,7 @@ on:
 
 env:
   ansible_config: operations/playbooks/ansible.cfg
-  command: ansible-playbook operations/playbooks/oracle_password_rotation/oem_password_rotation.yml
+  command: ansible-playbook operations/playbooks/oracle_password_rotation/oem_password_rotation.yml --limit server_type_hmpps_oem
   inventory: inventory/ansible
 
 # Allow permissions on repository and docker image and OIDC token
