--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -59,7 +59,7 @@ on:
 env:
   ansible_config: operations/playbooks/ansible.cfg
   database_command: ansible-playbook operations/playbooks/oracle_password_rotation/database_password_rotation.yml
-  oem_command: ansible-playbook operations/playbooks/oracle_password_rotation/oem_password_rotation.yml
+  oem_command: ansible-playbook operations/playbooks/oracle_password_rotation/oem_password_rotation.yml --limit server_type_hmpps_oem
   inventory: inventory/ansible
 
 # Allow permissions on repository and docker image and OIDC token
