--- a/.github/workflows/oracle-db-ssl-wallet.yml
+++ b/.github/workflows/oracle-db-ssl-wallet.yml
@@ -96,7 +96,7 @@ jobs:
           role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
           aws-region: "eu-west-2"
 
-      - name: Run Statspack Setup Playbook
+      - name: Run SSL Wallet Setup Playbook
         run: |
           export ANSIBLE_CONFIG=$ansible_config
           $command -i $inventory -e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }} \
