--- a/.github/workflows/oracle-db-ssl-wallet.yml
+++ b/.github/workflows/oracle-db-ssl-wallet.yml
@@ -52,7 +52,7 @@ jobs:
     environment: ${{ github.event.inputs.TargetEnvironment }}
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.41.0
+      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.77.0
     timeout-minutes: 1440
     continue-on-error: false
     steps:
@@ -73,6 +73,17 @@ jobs:
             ansible/group_vars
           path: inventory
           ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
+
+      - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            ansible/roles/secretsmanager-passwords
+          path: roles
+          ref: "${{ github.event.inputs.SourceConfigVersion }}"
           fetch-depth: 0
 
       - name: Checkout From hmpps-delius-operational-automation
