Stop Replication Tasks

--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -216,6 +216,17 @@ jobs:
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
+      - name: Checkout Ansible Required Roles From hmpps-delius-operation-automation
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/hmpps-delius-operation-automation
+          sparse-checkout-cone-mode: false
+          sparse-checkout: |
+            playbooks/oracle_audit_replication_management/oracle_audit_replication_management
+          path: roles
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
+
       - name: Define Delius Targets
         id: definetargets
         run: |
