--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/get_outbound_task_details.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/get_outbound_task_details.yml
@@ -1,8 +1,9 @@
 - name: Get ARN for Audited Interaction Replication Task
   shell: |
-         aws dms describe-replication-tasks --filters Name=endpoint-arn,Values={{ source_endpoint }} | \
+         aws dms describe-replication-tasks --filters Name=endpoint-arn,Values={{ source_endpoint }}  --region {{ region }}  | \
             jq -r '.ReplicationTasks[] | select(.TableMappings | contains("\"AUDITED_INTERACTION\"")) | .ReplicationTaskArn'
   register: get_audited_interaction_task_arn
+  delegate_to: localhost
   changed_when: false
 
 - set_fact:
@@ -10,9 +11,10 @@
 
 - name: Get ARN for Business Interaction Replication Task
   shell: |
-         aws dms describe-replication-tasks --filters Name=endpoint-arn,Values={{ source_endpoint }}  | \
+         aws dms describe-replication-tasks --filters Name=endpoint-arn,Values={{ source_endpoint }}  --region {{ region }}  | \
             jq -r '.ReplicationTasks[] | select(.TableMappings | contains("BUSINESS_INTERACTION")) | .ReplicationTaskArn'
   register: get_business_interaction_task_arn
+  delegate_to: localhost
   changed_when: false
 
 - set_fact:
@@ -20,7 +22,7 @@
 
 - name: Get ARN for Audited Interaction Checksum Replication Task
   shell: |
-         aws dms describe-replication-tasks --filters Name=endpoint-arn,Values={{ source_endpoint }} | \
+         aws dms describe-replication-tasks --filters Name=endpoint-arn,Values={{ source_endpoint }}  --region {{ region }}  | \
             jq -r '.ReplicationTasks[] | select(.TableMappings | contains("\"AUDITED_INTERACTION_CHECKSUM\"")) | .ReplicationTaskArn'
   register: get_audited_interaction_checksum_task_arn
   changed_when: false
@@ -31,7 +33,7 @@
 - name: Get ARN for Replication Instance
   shell: |
          aws dms describe-replication-tasks --filters Name=endpoint-arn,Values={{ source_endpoint }} \
-           --query "ReplicationTasks[0].{ReplicationInstance:ReplicationInstanceArn}" --output text
+           --query "ReplicationTasks[0].{ReplicationInstance:ReplicationInstanceArn}"  --region {{ region }}  --output text
   register: get_replication_instance_arn
   changed_when: FALSE
 
@@ -41,7 +43,7 @@
 - name: Get Identifier for Replication Instance
   shell: |
          aws dms describe-replication-instances --filters Name=replication-instance-arn,Values={{ replication_instance_arn }} \
-           --query "ReplicationInstances[0].ReplicationInstanceIdentifier" --output text
+           --query "ReplicationInstances[0].ReplicationInstanceIdentifier"  --region {{ region }}  --output text
   register: get_replication_instance_identifier
   changed_when: FALSE
 
