--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_business_interaction_task.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/restart_business_interaction_task.yml
@@ -5,7 +5,7 @@
 - name: Restart the Business Interaction DMS Replication Tasks with Full Load
   shell: |
          aws dms start-replication-task --replication-task-arn "{{ business_interaction_task_arn }}" \
-            --start-replication-task-type reload-target
+             --region {{ region }}  --start-replication-task-type reload-target
 
 # Ensure the Business Interaction Task is Running before we restart the Audit
 # Replication Task since this is required to refresh the Stage Business Interaction
@@ -14,7 +14,7 @@
   shell: |
           aws dms describe-replication-tasks \
              --filters Name=replication-task-arn,Values="{{ business_interaction_task_arn }}" \
-             --query "ReplicationTasks[0].Status" --output text
+              --region {{ region }}  --query "ReplicationTasks[0].Status" --output text
   register: task_status
   until: task_status.stdout == "running"
   retries: 60
