--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/resume_tasks.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/resume_tasks.yml
@@ -8,15 +8,15 @@
 - name: Resume the Audited Interaction Checksum DMS CDC Replication Tasks
   shell: |
          aws dms start-replication-task --replication-task-arn "{{ audited_interaction_checksum_task_arn }}" \
-            --start-replication-task-type resume-processing
+             --region {{ region }}  --start-replication-task-type resume-processing
 
 - name: Resume the User and Probation Area DMS CDC Replication Tasks
   shell: |
          aws dms start-replication-task --replication-task-arn "{{ user__task_arn }}" \
-            --start-replication-task-type resume-processing
+             --region {{ region }}  --start-replication-task-type resume-processing
 
 - name: Resume the Audited Interaction DMS CDC Replication Tasks
   shell: |
          aws dms start-replication-task --replication-task-arn "{{ audited_interaction_task_arn }}" \
-            --start-replication-task-type resume-processing
+             --region {{ region }}  --start-replication-task-type resume-processing
   when: audit_cdc_scn | default('') == ''
