Do not clean the checkout folder when we add another role

--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -223,6 +223,7 @@ jobs:
           sparse-checkout: |
             playbooks/oracle_audit_replication_management/oracle_audit_replication_management
           path: roles
+          clean: false
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
 
