--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -7,6 +7,11 @@
   any_errors_fatal: true
 
   tasks:
+
+    - name: Playbook Directory
+      debug:
+         var: playbook_dir
+
     - name: Validate Restore Point Name
       script: validate_restore_point_name.sh
       environment:
