Checkout common files one level up

--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -198,7 +198,7 @@ jobs:
           sparse-checkout-cone-mode: false
           sparse-checkout: |
             common/files
-          path: common
+          path: .
           ref: ${{ github.event.inputs.SourceCodeVersion }}
           fetch-depth: 0
 
