--- a/.github/workflows/oracle-db-restore-points.yml
+++ b/.github/workflows/oracle-db-restore-points.yml
@@ -245,6 +245,10 @@ jobs:
         run: |
           set -x
           export ANSIBLE_CONFIG=$ansible_config
+          ls $PWD
+          ls $PWD/operations
+          ls $PWD/operations/playbooks
+          ls $PWD/operations/oracle_restore_points
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_restore_points/roles
           ls -l $PWD/operations/playbooks/oracle_restore_points/roles
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
