--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/wait_for_zero_throughput.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/wait_for_zero_throughput.yml
@@ -13,7 +13,8 @@
   register: get_cdc_throughput_row_source
   until: (get_cdc_throughput_row_source.stdout == '0.0') or (get_cdc_throughput_row_source.stdout == 'null') or  (get_cdc_throughput_row_source.stdout == 'None')
   retries: 20
-  delay: 60
+  # delay: 60
+  delay: 6
   changed_when: FALSE
 
 - name: Final Output
