--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/wait_for_zero_throughput.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/wait_for_zero_throughput.yml
@@ -18,4 +18,5 @@
   changed_when: FALSE
 
 - name: Final Output
-    var: get_cdc_throughput_row_source
+  debug:
+      var: get_cdc_throughput_row_source
