--- a/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/wait_for_zero_throughput.yml
+++ b/playbooks/oracle_audit_replication_management/oracle_audit_replication_management/tasks/wait_for_zero_throughput.yml
@@ -1,14 +1,3 @@
-- name: What
-  shell: |
-         hostname
-         uname -a
-         which date
-  register: get_what
-
-- debug:
-    var: get_what
-
-
 # Check if there are still records being replicated, and wait for those to
 # complete if required - abort if audit still replicating after 20 minutes
 - name: Wait for CDC Throughput to Drop on Source
@@ -24,10 +13,6 @@
   register: get_cdc_throughput_row_source
   until: (get_cdc_throughput_row_source.stdout == '0.0') or (get_cdc_throughput_row_source.stdout == 'null') or  (get_cdc_throughput_row_source.stdout == 'None')
   retries: 20
-  # delay: 60
+  delay: 60
   delay: 6
   changed_when: FALSE
-
-- name: Final Output
-  debug:
-      var: get_cdc_throughput_row_source
