--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -400,6 +400,20 @@
               debug:
                  msg: "Restarting User Replication from Time {{ get_latest_user_update.stdout | trim }}"
 
+            # Include role inside a block so that it may be delegated
+            - name: Restart Audited Interaction Replication
+              when:
+                  - target_dbs | regex_search('delius_dbs')
+                  - database_primary_sid is defined
+              delegate_to: localhost
+              become: no
+              block:
+                - include_role:
+                    name: oracle_audit_replication_management
+                  vars:
+                    replication_action: start
+                    user_cdc_start_time: "{{ get_latest_user_update.stdout | trim }}"
+                    audit_cdc_scn: "{{ get_db_startup_scn.stdout | trim }}"
 
 # If this an AWS Environment then we will run password rotation - check if this is the case
 - name: Set Inside AWS for Password Rotation
