Include task to update oem targets

--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -246,6 +246,10 @@
     - name: Rotate Oracle Password
       include_tasks: rotate_oracle_password.yml
 
+    - name: Synchronise OEM Monitoring Passwords
+      include_tasks: update_oem_targets.yml
+      when: sync_monitoring_passwords_nonoem | default(false) | bool
+
   # Restart Monitoring regardless of success of password rotation
   always:
     - name: Re-Enable Monitoring
