Amendments to handle which emcli to run

--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
@@ -2,21 +2,21 @@
   set_fact:
     secretsmanager_passwords_dict: {}
 
-- name: Setup Temporary Secrets Dictionary For Non OEM
+- name: Setup Temporary Secrets Dictionary For Non OEM Running From OEM
   set_fact:
     secret_password_dict:
       account:
         account_name: "{{ target_account_name }}"
         assume_role_name: "EC2OracleEnterpriseManagementSecretsRole"
         secret: "{{ secret_name }}"
-  when: not target_environment_name is search('hmpps-oem')
+  when: not target_environment_name is search('hmpps-oem') and emcli_login is not defined
 
-- name: Setup Temporary Secrets Dictionary For OEM
+- name: Setup Temporary Secrets Dictionary For OEM and Non OEM (Not Running From OEM)
   set_fact:
     secret_password_dict:
       account:
         secret: "{{ secret_name }}"
-  when: target_environment_name is search('hmpps-oem')
+  when: target_environment_name is search('hmpps-oem') or emcli_login is defined
 
 - name: Combine {{ db_username }} User To Secrets Dictionary
   set_fact:
@@ -35,6 +35,7 @@
 - name: Set the Monitoring Credential
   shell: |
     . ~/.bash_profile
+    {{ emcli_login | default() }}
     {{ emcli }} sync 1>/dev/null 2>&1 || ( {{ emcli }} login -username=sysman -password=${SYSMAN_PASSWORD} -force && {{ emcli }} sync ) 1>/dev/null 2>&1
     {{ emcli }} modify_target -name="{{ monitor_item.split()[0] }}" -type="{{ monitor_type }}" -credentials="UserName:{{ db_username }};password:${PASSWORD};Role:{{ monitor_role }}" -on_agent
   environment:
