--- a/playbooks/oracle_restore_points/playbook.yml
+++ b/playbooks/oracle_restore_points/playbook.yml
@@ -379,6 +379,7 @@
   vars:
     rotate_database_passwords: true
     rotate_groups: "{{ target_dbs }}"
+    sync_monitoring_passwords_nonoem: true
   when:
     - required_action == "Flashback to Restore Point"
     - is_aws_environment | default(false)
